Fix scrollbar thumb color

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: rgba(255,255,225,0.5);
+  background-color: rgba(255,255,255,0.5);
 }
 
 code {
